--- a/css/style.css
+++ b/css/style.css
@@ -60,16 +60,48 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding: 20px;
+    padding: 20px 40px;
 }
 
-.contact {}
+.contact {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contact-img {
+    height: 20px;
+    width: 20px;
+    background: no-repeat center/cover;
+}
+
+.img-email {
+    background: url('../img/email.png');
+}
+
+.img-phone {
+    background: url('../img/phone.png');
+}
+
+.img-telegram {
+    background: url('../img/telegram.png');
+}
+
+.img-linkedin {
+    background: url('../img/linkedin.png');
+}
+
+.img-github {
+    background: url('../img/github.png');
+}
+
 
 .section {
     margin-top: 50px;
     display: flex;
     flex-direction: column;
-    background-color: #eee;
+    background-color: rgba(160, 254, 153, 1);
     padding: 20px;
     border-radius: 20px;
 }
@@ -82,7 +114,7 @@ body {
 .about-me {
     display: flex;
     flex-direction: row;
-    background-color: #ccc;
+    background-color: #fff;
     padding: 20px;
     border-radius: 20px;
 }
@@ -143,8 +175,10 @@ body {
 }
 
 .additional-info {
+    max-width: 200px;
     font-style: italic;
     font-size: 18px;
+    text-align: center;
 }
 
 .small-sections {
@@ -154,9 +188,25 @@ body {
 }
 
 .img-expertsoft {
-    background: no-repeat center/cover url('../img/expertsoft.jpg');
+    background: url('../img/expertsoft.jpg');
 }
 
 .img-innowise {
-    background: no-repeat center/cover url('../img/innowise.jpg');
+    background: url('../img/innowise.jpg');
+}
+
+.project-tile {
+    align-items: center;
+    padding: 20px;
+    max-width: 300px;
+}
+
+.project-name {
+    font-weight: 700;
+}
+
+
+.project-list {
+    margin: 20px;
+    text-align: left;
 }
